# alexikehayiasportoflio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Projects/Exploratory Data Analysis And Machine Learning/ANWB Accident Risk Detection/: JupyterNotebook_template_Y1D_2023-24.ipynb
Projects/Exploratory Data Analysis And Machine Learning/ANWB Accident Risk Detection/Block D Group Project/Application/: pyproject.toml  requirements.txt
Projects/Exploratory Data Analysis And Machine Learning/ANWB Accident Risk Detection/Block D Group Project/Application/Unit Testing/: .coverage  Improved_MLP_Model_2B.h5  Unit Testing_Alexi_232230.ipynb  data_preprocessing.py  driving_app.py  driving_app_test.py  model_evaluation.py  model_training.py  test_model_evaluation.py  test_model_preprocess.py  test_model_training.py  test_preprocessor.py
Projects/Exploratory Data Analysis And Machine Learning/ANWB Accident Risk Detection/Block D Group Project/Application/Unit Testing/.ipynb_checkpoints/: model_evaluation-checkpoint.py  model_preprocessing-checkpoint.py  model_training-checkpoint.py  test_model_training-checkpoint.py
Projects/MLOps Deployment/: README.md
Projects/Microsoft Power BI/IKEA Card Skimming Detection/: EFT Tracker Buas Data.csv  (+2 more)
public/: 404.html
src/: App.tsx  index.css
src/components/: Hero.tsx  ProjectCard.tsx  ProjectSection.tsx  Skills.tsx  SpecializationSlider.tsx
src/data/: projects.ts
src/pages/: Index.tsx  ProjectDetails.tsx
src/types/: project.ts
(+71 files in other folders)
