[tool.poetry]
name = "group24"
version = "0.1.0"
description = ""
authors = ["AlexiKehayias232230 <232230@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "^2.1.0"
altair = "^5.3.0"
anyio = "^4.4.0"
argon2-cffi = "^23.1.0"
arrow = "^1.3.0"
asttokens = "^2.4.1"
astunparse = "^1.6.3"
async-lru = "^2.0.4"
attrs = "^23.2.0"
babel = "^2.15.0"
beautifulsoup4 = "^4.12.3"
bleach = "^6.1.0"
blinker = "^1.8.2"
build = "^1.2.1"
cachecontrol = "^0.14.0"
cachetools = "^5.3.3"
certifi = "^2024.6.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
comm = "^0.2.2"
contourpy = "^1.2.1"
coverage = "^7.5.3"
crashtest = "^0.4.1"
cryptography = "^42.0.8"
cycler = "^0.12.1"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
unittest2 = "^1.1.0"
streamlit = "^1.35.0"
imbalanced-learn = "^0.12.3"
keras = "^3.3.3"
pip-tools = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
